--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - run:
           name: Execute tests!
           command: |
-            ./gradlew test --tests "AmazonTest.hpChromebookAddToCartPriceTest"
+            ./gradlew test --tests "passedTest"
 
       - run:
           name: Stop selenium grid
